Tentando arrumar o layout em telas pequenas

--- a/index.html
+++ b/index.html
@@ -40,33 +40,33 @@
         
         <form class="form-horizontal">
             <div class="form-group">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <button class="btn btn-block btn-personagem morgana btn-unselected" id="morgana">Morgana / Percival</button>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <button class="btn btn-block btn-personagem mordred btn-unselected" id="mordred">Mordred</button>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-12">
+                <div class="col-xs-12">
                     <button class="btn btn-block btn-personagem oberon btn-unselected" id="oberon">Oberon</button>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button class="btn btn-block btn-personagem lancelot btn-unselected" id="lancelot1">Lancelot v1/2</button>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button class="btn btn-block btn-personagem lancelot btn-unselected" id="lancelot3">Lancelot v3</button>
                 </div>
             </div>
             <div class="form-group">
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button class="btn btn-block narrar" id="play"><span class="glyphicon glyphicon-play"></span></button>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-xs-6">
                     <button class="btn btn-block narrar" id="stop"><span class="glyphicon glyphicon-stop"></span></button>
                 </div>
             </div>
