--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" sizes="36x36" href="launcher-icon-0-75x.png">
+    <link rel="icon" sizes="48x48" href="launcher-icon-1x.png">
+    <link rel="icon" sizes="72x72" href="launcher-icon-1-5x.png">
+    <link rel="icon" sizes="96x96" href="launcher-icon-2x.png">
+    <link rel="icon" sizes="144x144" href="launcher-icon-3x.png">
+    <link rel="icon" sizes="192x192" href="launcher-icon-4x.png">
 
     <title>Narrador - AVALON</title>
 
