--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/howler.min.js"></script>
-    <script src="avalon.js"></script>
+    <script src="avalon_1.0.1.js "></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="js/ie10-viewport-bug-workaround.js"></script>
   </body>
